css: letter form, fix z-index to view .chosen select

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -358,7 +358,7 @@
     height: 100%;
     color: #fff;
     position: relative;
-    z-index: 100;
+    z-index: 4;
     text-shadow: 0 0 20px #333;
     text-align: center;
   }
@@ -367,7 +367,7 @@
     top: 0;
     left: 0;
     bottom: 0;
-    z-index: 10;
+    z-index: 2;
     content: "";
     display: block;
     width: 100%;
@@ -668,16 +668,16 @@
   }*/
   /* @end */
   /* @group ----- Items/Show ----- */
-  #item-linked h4 {
+  #item-linked h4, .resource-list h4 {
     float: none;
   }
-  #item-linked .value {
+  #item-linked .value, .resource-list .value {
     overflow: auto;
   }
-  #item-linked table {
+  #item-linked table, .resource-list table {
     margin: 1em;
   }
-  #item-linked table, #item-linked table tr, #item-linked table td, #item-linked table th {
+  #item-linked table, #item-linked table tr, #item-linked table td, #item-linked table th, .resource-list table, .resource-list table tr, .resource-list table td, .resource-list table th {
     border: 1px solid black;
     padding: 0.1em 0.2em;
   }
@@ -1799,7 +1799,7 @@
   header {
     text-align: left;
     background-color: #FFF;
-    z-index: 10;
+    z-index: 2;
     -moz-box-shadow: 0 0 50px rgba(0, 128, 0, 0.18);
     -webkit-box-shadow: 0 0 50px rgba(0, 128, 0, 0.18);
     box-shadow: 0 0 50px rgba(0, 128, 0, 0.18);
@@ -1833,7 +1833,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 10;
+    z-index: 2;
     font-size: 0;
   }
   #search-form input[type=text] {
@@ -1997,7 +1997,7 @@
     width: 100%;
     background-image: linear-gradient(0deg, #ffffff, rgba(255, 255, 255, 0));
     position: absolute;
-    z-index: 50;
+    z-index: 4;
   }
 
   /* @end */
