--- a/asset/sass/_screen_40em.scss
+++ b/asset/sass/_screen_40em.scss
@@ -32,7 +32,7 @@ header {
     text-align: left;
     //@include leader(2);
     background-color: #FFF;
-    z-index: 10;
+    z-index: 2;
     @include box-shadow(0 0 50px rgba(0, 128, 0, 0.18));
     border-top: 5px solid #DB6C36;
 	
@@ -67,7 +67,7 @@ header {
     position: absolute;
     top: 0;
     right: 0;
-    z-index: 10;
+    z-index: 2;
     font-size: 0;
     
     input[type=text] { 
@@ -222,7 +222,7 @@ footer img {
         width: 100%;
         background-image: linear-gradient(0deg, rgba(255,255,255,1), rgba(255,255,255,0));
         position: absolute;
-        z-index: 50;
+        z-index: 4;
     }
 }
 
